samples/_failures_safe/1761786580_b48bd4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f465472d.c: In function ‘tokenize’:
./samples/SAFE/__tmp_f465472d.c:148:5: error: expected expression at end of input
  148 |     if (lexer == NULL || tokens == NULL || max_tokens <= 0)
      |     ^~
./samples/SAFE/__tmp_f465472d.c:148:5: error: expected declaration or statement at end of input
